cmake_minimum_required(VERSION 2.8.3)
project(cob_moveit_config)

find_package(catkin REQUIRED)

catkin_package()

install(DIRECTORY launch DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})
install(DIRECTORY cob3-1 DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})
install(DIRECTORY cob3-2 DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})
install(DIRECTORY cob3-3 DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})
install(DIRECTORY cob3-4 DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})
install(DIRECTORY cob3-5 DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})
install(DIRECTORY cob3-6 DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})
install(DIRECTORY cob3-7 DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})
install(DIRECTORY raw3-1 DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})
