cmake_minimum_required(VERSION 2.8.3)
project(cob_moveit_config)

find_package(catkin REQUIRED)

catkin_package()

install(DIRECTORY launch DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})
install(DIRECTORY cob3-3 DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})
install(DIRECTORY cob3-6 DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})
install(DIRECTORY cob4-1 DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})
install(DIRECTORY cob4-2 DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})
install(DIRECTORY lwa4d DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})
install(DIRECTORY lwa4p_extended DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})
install(DIRECTORY raw3-1 DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})
