<package>
  <name>cob_moveit_config</name>
  <version>0.6.1</version>
  <description>
     MoveIt config files for all cob and raw
  </description>
  <author email="mdl@ipa.fhg.de">Mathias Luedtke</author>
  <maintainer email="mdl@ipa.fhg.de">Mathias Luedtke</maintainer>

  <license>BSD</license>

  <url type="website">http://moveit.ros.org/</url>
  <url type="bugtracker">https://github.com/ros-planning/moveit_setup_assistant/issues</url>
  <url type="repository">https://github.com/ros-planning/moveit_setup_assistant</url>

  <run_depend>moveit_ros_move_group</run_depend>
  <run_depend>moveit_planners_ompl</run_depend>
  <run_depend>moveit_ros_visualization</run_depend>
  <run_depend>moveit_plugins</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>cob_hardware_config</run_depend>


  <buildtool_depend>catkin</buildtool_depend>
  
</package>
