<package format="2">
  <name>cob_moveit_config</name>
  <version>0.6.4</version>
  <description>
     MoveIt config files for all cob and raw
  </description>
  <author email="mdl@ipa.fhg.de">Mathias Luedtke</author>
  <maintainer email="mdl@ipa.fhg.de">Mathias Luedtke</maintainer>
  <maintainer email="fxm@ipa.fhg.de">Felix Messmer</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>


  <exec_depend>cob_hardware_config</exec_depend>
  <exec_depend>moveit_setup_assistant</exec_depend>
  <exec_depend>xacro</exec_depend>

</package>
