<?xml version="1.0"?>
<package>

  <name>cob_behaviour</name>
  <version>0.0.0</version>
  <description>The cob_behaviour package</description>
  <maintainer email="nhg@ipa.fhg.de">Nadia Hammoudeh Garcia</maintainer>
  <license>LGPL</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cob_script_server</build_depend>
  <build_depend>rospy</build_depend>

  <run_depend>cob_light</run_depend>
  <run_depend>cob_script_server</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>

</package>
