<package format="2">
  <name>cob_bringup</name>
  <version>0.6.4</version>
  <description>This package provides launch files for operating Care-O-bot.</description>

  <license>LGPL</license>

  <url type="website">http://ros.org/wiki/cob_bringup</url>
  <!-- <url type="bugtracker"></url> -->

  <maintainer email="nhg@ipa.fhg.de">Nadia Hammoudeh Garcia</maintainer>
  <author email="fmw@ipa.fhg.de">Florian Weisshardt</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roslaunch</depend>

  <exec_depend>camera1394</exec_depend>
  <exec_depend>canopen_motor_node</exec_depend>
  <exec_depend>cob_base_drive_chain</exec_depend>
  <exec_depend>cob_base_velocity_smoother</exec_depend>
  <exec_depend>cob_calibration_data</exec_depend>
  <exec_depend>cob_cam3d_throttle</exec_depend>
  <exec_depend>cob_camera_sensors</exec_depend>
  <exec_depend>cob_collision_velocity_filter</exec_depend>
  <exec_depend>cob_command_gui</exec_depend>
  <exec_depend>cob_control_mode_adapter</exec_depend>
  <exec_depend>cob_dashboard</exec_depend>
  <exec_depend>cob_default_env_config</exec_depend>
  <exec_depend>cob_default_robot_config</exec_depend>
  <exec_depend>cob_footprint_observer</exec_depend>
  <exec_depend>cob_frame_tracker</exec_depend>
  <exec_depend>cob_hardware_config</exec_depend>
  <exec_depend>cob_head_axis</exec_depend>
  <exec_depend>cob_image_flip</exec_depend>
  <exec_depend>cob_lbr</exec_depend>
  <exec_depend>cob_light</exec_depend>
  <exec_depend>cob_mimic</exec_depend>
  <exec_depend>cob_monitoring</exec_depend>
  <exec_depend>cob_phidgets</exec_depend>
  <exec_depend>cob_relayboard</exec_depend>
  <exec_depend>cob_safety_controller</exec_depend>
  <exec_depend>cob_script_server</exec_depend>
  <exec_depend>cob_sick_lms1xx</exec_depend>
  <exec_depend>cob_sick_s300</exec_depend>
  <exec_depend>cob_sound</exec_depend>
  <exec_depend>cob_teleop</exec_depend>
  <exec_depend>cob_trajectory_controller</exec_depend>
  <exec_depend>cob_twist_controller</exec_depend>
  <exec_depend>cob_undercarriage_ctrl</exec_depend>
  <exec_depend>cob_voltage_control</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>costmap_2d</exec_depend>
  <exec_depend>diagnostic_aggregator</exec_depend>
  <exec_depend>effort_controllers</exec_depend>
  <exec_depend>frida_driver</exec_depend>
  <exec_depend>hokuyo_node</exec_depend>
  <exec_depend>image_proc</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>nodelet</exec_depend>
  <exec_depend>openni_launch</exec_depend>
  <exec_depend>openni2_launch</exec_depend>
  <exec_depend>position_controllers</exec_depend>
  <exec_depend>position_controllers</exec_depend>
  <exec_depend>prace_gripper_driver</exec_depend>
  <exec_depend>prosilica_camera</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>schunk_powercube_chain</exec_depend>
  <exec_depend>schunk_sdh</exec_depend>
  <exec_depend>schunk_sdhx</exec_depend>
  <exec_depend>topic_tools</exec_depend>
  <exec_depend>ur_driver</exec_depend>
  <exec_depend>velocity_controllers</exec_depend>
  <!--exec_depend>softkinetic</exec_depend-->

</package>
