<package format="2">
  <name>cob_bringup</name>
  <version>0.6.6</version>
  <description>This package provides launch files for operating Care-O-bot.</description>

  <license>Apache 2.0</license>

  <url type="website">http://ros.org/wiki/cob_bringup</url>
  <!-- <url type="bugtracker"></url> -->

  <maintainer email="fxm@ipa.fhg.de">Felix Messmer</maintainer>
  <author email="fxm@ipa.fhg.de">Felix Messmer</author>
  <author email="nhg@ipa.fhg.de">Nadia Hammoudeh Garcia</author>
  <author email="fmw@ipa.fhg.de">Florian Weisshardt</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roslaunch</depend>

  <exec_depend>canopen_chain_node</exec_depend>
  <exec_depend>canopen_motor_node</exec_depend>
  <exec_depend>cob_android_script_server</exec_depend>
  <exec_depend>cob_base_velocity_smoother</exec_depend>
  <exec_depend>cob_bms_driver</exec_depend>
  <exec_depend>cob_calibration_data</exec_depend>
  <exec_depend>cob_cam3d_throttle</exec_depend>
  <exec_depend>cob_collision_monitor</exec_depend>
  <exec_depend>cob_collision_velocity_filter</exec_depend>
  <exec_depend>cob_command_gui</exec_depend>
  <exec_depend>cob_control_mode_adapter</exec_depend>
  <exec_depend>cob_dashboard</exec_depend>
  <exec_depend>cob_default_env_config</exec_depend>
  <exec_depend>cob_default_robot_behavior</exec_depend>
  <exec_depend>cob_default_robot_config</exec_depend>
  <exec_depend>cob_docker_control</exec_depend> <!-- from cob_substitute -->
  <exec_depend>cob_frame_tracker</exec_depend>
  <exec_depend>cob_hand_bridge</exec_depend>
  <exec_depend>cob_hardware_config</exec_depend>
  <exec_depend>cob_helper_tools</exec_depend>
  <exec_depend>cob_image_flip</exec_depend>
  <exec_depend>cob_light</exec_depend>
  <exec_depend>cob_linear_nav</exec_depend>
  <exec_depend>cob_mimic</exec_depend>
  <exec_depend>cob_monitoring</exec_depend>
  <exec_depend>cob_moveit_config</exec_depend>
  <exec_depend>cob_obstacle_distance</exec_depend>
  <exec_depend>cob_omni_drive_controller</exec_depend>
  <exec_depend>cob_phidgets</exec_depend>
  <exec_depend>cob_phidget_power_state</exec_depend>
  <exec_depend>cob_phidget_em_state</exec_depend>
  <exec_depend>cob_reflector_referencing</exec_depend> <!-- from cob_substitute -->
  <exec_depend>cob_safety_controller</exec_depend> <!-- from cob_substitute -->
  <exec_depend>cob_scan_unifier</exec_depend>
  <exec_depend>cob_script_server</exec_depend>
  <exec_depend>cob_sick_lms1xx</exec_depend>
  <exec_depend>cob_sick_s300</exec_depend>
  <exec_depend>cob_sound</exec_depend>
  <exec_depend>cob_teleop</exec_depend>
  <exec_depend>cob_twist_controller</exec_depend>
  <exec_depend>cob_voltage_control</exec_depend>
  <exec_depend>compressed_depth_image_transport</exec_depend> <!-- needed by the cameras to publish the compressed topics -->
  <exec_depend>compressed_image_transport </exec_depend> <!-- needed by the cameras to publish the compressed topics -->
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>costmap_2d</exec_depend>
  <exec_depend>diagnostic_aggregator</exec_depend>
  <exec_depend>image_proc</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>laser_filters</exec_depend>
  <exec_depend>nodelet</exec_depend>
  <exec_depend>openni_launch</exec_depend>
  <exec_depend>openni2_launch</exec_depend>
  <exec_depend>position_controllers</exec_depend>
  <exec_depend>realsense_camera</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rosserial_python</exec_depend>
  <exec_depend>rosserial_server</exec_depend>
  <exec_depend>rostopic</exec_depend>
  <exec_depend>rplidar_ros</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>sick_visionary_t_driver</exec_depend>
  <exec_depend>spacenav_node</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>theora_image_transport</exec_depend> <!-- needed by the cameras to publish the compressed topics -->
  <exec_depend>topic_tools</exec_depend>
  <exec_depend>twist_mux</exec_depend>
  <exec_depend>ur_driver</exec_depend>
  <exec_depend>usb_cam</exec_depend>
  <exec_depend>velocity_controllers</exec_depend>

  <test_depend>cob_supported_robots</test_depend>

</package>
