<package>
  <name>cob_controller_configuration_gazebo</name>
  <version>0.6.3</version>
  <description>This packages provides the controller configuration for simulating Care-O-bot in the gazebo simulator.</description>
  
  <license>LGPL</license>

  <url type="website">http://ros.org/wiki/cob_controller_configuration_gazebo</url>
  <!-- <url type="bugtracker"></url> -->

  <maintainer email="fmw@ipa.fhg.de">Florian Weisshardt</maintainer>
  <maintainer email="fxm@ipa.fhg.de">Felix Messmer</maintainer>
  <author email="fmw@ipa.fhg.de">Florian Weisshardt</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslaunch</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>rostopic</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>diagnostic_msgs</run_depend>
  <run_depend>cob_bringup</run_depend>
  <run_depend>cob_script_server</run_depend>
  
  <run_depend>cob_phidgets</run_depend>
  <run_depend>cob_cam3d_throttle</run_depend>
  <run_depend>topic_tools</run_depend>
  
  

  <export>

  </export>
</package>
