<package format="2">
  <name>cob_controller_configuration_gazebo</name>
  <version>0.6.6</version>
  <description>This packages provides the controller configuration for simulating Care-O-bot in the gazebo simulator.</description>

  <license>LGPL</license>

  <url type="website">http://ros.org/wiki/cob_controller_configuration_gazebo</url>
  <!-- <url type="bugtracker"></url> -->

  <maintainer email="fmw@ipa.fhg.de">Florian Weisshardt</maintainer>
  <maintainer email="fxm@ipa.fhg.de">Felix Messmer</maintainer>
  <author email="fmw@ipa.fhg.de">Florian Weisshardt</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roslaunch</depend>

  <exec_depend>cob_bringup</exec_depend>
  <exec_depend>cob_cam3d_throttle</exec_depend>
  <exec_depend>cob_hardware_config</exec_depend>
  <exec_depend>cob_phidgets</exec_depend>
  <exec_depend>cob_script_server</exec_depend>
  <exec_depend>diagnostic_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>topic_tools</exec_depend>

</package>
