<package format="2">
  <name>cob_default_robot_behavior</name>
  <version>0.6.6</version>
  <description>The cob_default_robot_behavior package</description>

  <license>LGPL</license>

  <maintainer email="nhg@ipa.fhg.de">Nadia Hammoudeh Garcia</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>cob_light</exec_depend>
  <exec_depend>cob_script_server</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>

</package>
