<package format="2">
  <name>cob_default_robot_config</name>
  <version>0.6.4</version>
  <description>Default configuration of the different robots supported by the Care-O-bot stacks. Configuration is e.g. preconfigured joint positions.</description>

  <license>LGPL</license>

  <url type="website">http://ros.org/wiki/cob_default_robot_config</url>
  <!-- <url type="bugtracker"></url> -->

  <maintainer email="nhg@ipa.fhg.de">Nadia Hammoudeh Garcia</maintainer>
  <author email="fmw@ipa.fhg.de">Florian Weisshardt</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roslaunch</depend>

</package>
