<package format="2">
  <name>cob_hardware_config</name>
  <version>0.6.6</version>
  <description>This package contains configuration for each robot instance (e.g. cob4-X, raw3-X). There is a directory for each robot with configuration about urdf and hardware/device configurations.</description>

  <license>Apache 2.0</license>

  <url type="website">http://ros.org/wiki/cob_hardware_config</url>
  <!-- <url type="bugtracker"></url> -->

  <maintainer email="fxm@ipa.fhg.de">Felix Messmer</maintainer>
  <author email="fxm@ipa.fhg.de">Felix Messmer</author>
  <author email="nhg@ipa.fhg.de">Nadia Hammoudeh Garcia</author>
  <author email="fmw@ipa.fhg.de">Florian Weisshardt</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roslaunch</depend>
  <depend>rostest</depend>

  <build_depend>cob_supported_robots</build_depend>
  
  <exec_depend>cob_calibration_data</exec_depend>
  <exec_depend>cob_description</exec_depend>
  <exec_depend>cob_omni_drive_controller</exec_depend>
  <exec_depend>diagnostic_aggregator</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>position_controllers</exec_depend>
  <exec_depend>raw_description</exec_depend>
  <exec_depend>ur_description</exec_depend>
  <exec_depend>velocity_controllers</exec_depend>
  <exec_depend>xacro</exec_depend>

</package>
